Fixed overflowing frames

--- a/src/Styles/Components/Article/Embeds.scss
+++ b/src/Styles/Components/Article/Embeds.scss
@@ -1,6 +1,8 @@
 .article-embed {
     border-radius: 6px;
 
+    max-width: 100%;
+
     &.article-reddit-embed {
         background: #FFF;
     }
